# VPKEdit

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTROLS.md  CREDITS.md  INSTALL.md  LICENSE  README.md  create_sln.bat
.build-aux/: generate-deps.py
.build-aux/flatpak/: dependencies.yml  info.craftablescience.VPKEdit.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  translation_error.yml
.github/workflows/: build.yml  codeql.yml  release.yml
cmake/: make_icns.cmake
cmake/macos/: MakeICNS.cmake  SignBundle.cmake
example/: SamplePackFileImpl.cpp  SamplePackFileImpl.h  _example.cmake
examples/: Example.cpp
ext/: _ext.cmake
ext/cli/: _cli.cmake
ext/gui/: _gui.cmake
ext/shared/: _shared.cmake
include/vpkedit/: Attribute.h  BSP.h  Entry.h  GCF.h  GMA.h  Options.h  PackFile.h  PackFileType.h  VPK.h  Version.h.in  ZIP.h
include/vpkedit/detail/: Adler32.h  CRC.h  CRC32.h  FileStream.h  MD5.h  Misc.h  RSA.h
include/vpkedit/format/: BSP.h  FPX.h  GCF.h  GMA.h  GRP.h  PAK.h  PCK.h  VPK.h  ZIP.h
include/vpkeditc/: API.h  AttributeWrapper.h  Buffer.h  Entry.h  EntryWrapper.h  Options.h  OptionsWrapper.h  PackFile.h  PackFileType.h  PackFileTypeWrapper.h  PackFileWrapper.h  String.h  StringArray.h  Version.h.in
include/vpkeditc/format/: BSP.h  BSPWrapper.h  FPX.h  FPXWrapper.h  GCF.h  GCFWrapper.h  GMA.h  GMAWrapper.h  GRP.h  GRPWrapper.h  PAK.h  PAKWrapper.h  PCK.h  PCKWrapper.h  VPK.h  VPKWrapper.h  ZIP.h  ZIPWrapper.h
include/vpktool/: FileInputStream.h  InputStream.h  VPK.h
include/vpktool/detail/: CRC.h  FileStream.h
install/: _install.cmake
install/linux/: desktop.in  metainfo.xml.in  mime-type.xml.in  wrapper.in
install/macos/: DMGSetup.scpt  MacOSXBundleInfo.plist.in
install/win/: InstallCommands.nsh.in  NSIS.InstallOptions.ini.in  NSIS.template.in  UninstallCommands.nsh.in
res/: create_ico.sh  logo.qrc  logo_alt.qrc  logo_alt.rc  program.manifest  res.qrc
res/brand/: logo_16.xcf
res/i18n/: vpkedit_bs_BA.ts  vpkedit_de.ts  vpkedit_en.ts  vpkedit_es.ts  vpkedit_hr.ts  vpkedit_it.ts  vpkedit_ja.ts  vpkedit_ko.ts  vpkedit_nl.ts  vpkedit_pl.ts  vpkedit_pt_BR.ts  vpkedit_ru_RU.ts  vpkedit_sl.ts  vpkedit_sv.ts  vpkedit_vi.ts  vpkedit_zh_CN.ts
res/icons/: model_shader_modes.pdn
res/shaders/: mdl.vert  mdl_shaded_textured.frag  mdl_shaded_untextured.frag  mdl_unshaded_textured.frag  mdl_wireframe.frag
scripts/: build_macos.sh  generate_icns.sh
src/: FileInputStream.cpp  InputStream.cpp  VPK.cpp
src/cli/: Main.cpp  Tree.cpp  Tree.h  _cli.cmake
src/gui/: Config.h.in  EntryContextMenuData.cpp  EntryContextMenuData.h  EntryTree.cpp  EntryTree.h  FileViewer.cpp  FileViewer.h  Main.cpp  Options.cpp  Options.h  Window.cpp  Window.h  _gui.cmake  windows.manifest
src/gui/config/: Config.h.in  Options.cpp  Options.h
src/gui/dialogs/: ControlsDialog.cpp  ControlsDialog.h  CreditsDialog.cpp  CreditsDialog.h  EntryOptionsDialog.cpp  EntryOptionsDialog.h  NewEntryDialog.cpp  NewEntryDialog.h  NewUpdateDialog.cpp  NewUpdateDialog.h  NewVPKOptionsDialog.cpp  NewVPKOptionsDialog.h  PackFileOptionsDialog.cpp  PackFileOptionsDialog.h  VICEDialog.cpp  VICEDialog.h  VPKPropertiesDialog.cpp  VPKPropertiesDialog.h  VPKVersionDialog.cpp  VPKVersionDialog.h  VerifyChecksumsDialog.cpp  VerifyChecksumsDialog.h  VerifySignatureDialog.cpp  VerifySignatureDialog.h
src/gui/extensions/: Folder.cpp  Folder.h  SingleFile.cpp  SingleFile.h
src/gui/formats/: VTFDecoder.cpp  VTFDecoder.h
src/gui/installer/deb/: desktop.in  vpkedit.desktop.in  vpkedit.sh.in  vpktool.desktop.in  vpktool.sh.in
src/gui/plugins/: IVPKEditWindowAccess.cpp  IVPKEditWindowAccess.h
src/gui/popups/: NewEntryDialog.cpp  NewEntryDialog.h  NewUpdateDialog.cpp  NewUpdateDialog.h  NewVPKDialog.cpp  NewVPKDialog.h  VPKVersionDialog.cpp
src/gui/previews/: AudioPreview.cpp  AudioPreview.h  DMXPreview.cpp  DMXPreview.h  DirPreview.cpp  DirPreview.h  EmptyPreview.cpp  EmptyPreview.h  ErrorPreview.cpp  ErrorPreview.h  ImagePreview.cpp  ImagePreview.h  InfoPreview.cpp  InfoPreview.h  MDLPreview.cpp  MDLPreview.h  TextPreview.cpp  TextPreview.h  TexturePreview.cpp  TexturePreview.h  VTFPreview.cpp  VTFPreview.h
src/gui/res/: logo.qrc  logo_alt.qrc  program.manifest  res.qrc
src/gui/res/i18n/: vpkedit.en.ts  (+16 more)
src/gui/utility/: AudioPlayer.cpp  AudioPlayer.h  DiscordPresence.cpp  DiscordPresence.h  DragWatcher.cpp  DragWatcher.h  ImageLoader.cpp  ImageLoader.h  Options.cpp  Options.h  PluginFinder.cpp  PluginFinder.h  TGADecoder.cpp  TGADecoder.h  TempDir.cpp  TempDir.h  ThemedIcon.cpp  ThemedIcon.h  VTFDecoder.cpp  VTFDecoder.h
src/installer/: .nonportable  _flatpak.cmake  _installer.cmake
src/installer/deb/: desktop.in  mime-type.xml.in
src/installer/flatpak/: Makefile  _flatpak.cmake  desktop.in  info.craftablescience.vpkedit.Devel.yaml
src/installer/linux/: desktop.in  info.craftablescience.vpkedit.Devel.yaml  mime-type.xml.in
src/installer/win/: InstallCommands.nsh.in  NSIS.InstallOptions.ini.in  NSIS.template.in  UninstallCommands.nsh.in
src/lib/: BSP.cpp  Entry.cpp  FileStream.cpp  GCF.cpp  GMA.cpp  PackFile.cpp  VPK.cpp  ZIP.cpp  _lib.cmake
src/lib/detail/: Adler32.cpp  CRC.cpp  CRC32.cpp  FileStream.cpp  MD5.cpp  Misc.cpp  RSA.cpp
src/lib/format/: BSP.cpp  FPX.cpp  GCF.cpp  GMA.cpp  GRP.cpp  PAK.cpp  PCK.cpp  VPK.cpp  ZIP.cpp
src/libc/: API.h  Buffer.cpp  Entry.cpp  EntryWrapper.cpp  Helpers.cpp  Helpers.hpp  PackFile.cpp  PackFileWrapper.cpp  String.cpp  StringArray.cpp  _libc.cmake
src/libc/format/: BSPWrapper.cpp  FPXWrapper.cpp  GCFWrapper.cpp  GMAWrapper.cpp  GRPWrapper.cpp  PAKWrapper.cpp  PCKWrapper.cpp  VPK.cpp  VPKWrapper.cpp  ZIP.cpp  ZIPWrapper.cpp
src/libcs/: libvpkedit.sln
src/libcs/libvpkedit/: Attribute.cs  Buffer.cs  Entry.cs  Options.cs  PackFile.cs  String.cs  libvpkedit.csproj  libvpkedit.csproj.in
src/shared/: Config.h.in  _shared.cmake
src/shared/config/: Version.h.in
test/: VPKTest.cpp  _test.cmake
test/lib/format/: VPK.cpp
tests/: VPKTest.cpp
(+82 files in other folders)
